feat: implement new method and ep for market domain flows and apply filter to search stocks by martketid
